# comfyui-penplotter

./: README.md  __init__.py  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
src/penplotter/: nodes.py  trace_skeleton.py
tests/: __init__.py  test_penplotter.py
web/: qr_code_preview.js  svg_to_animation_frames.js  svg_to_mp4_animation.js  video_preview.js
